add complete toggle in getTransaction

--- a/html/getDeed.html
+++ b/html/getDeed.html
@@ -57,7 +57,7 @@
 					        <div class="input-group-prepend">
 					          <div class="input-group-text">เลขที่โฉนด</div>
 					        </div>
-					        <input type="text" class="form-control" id="GdocumentNumber" placeholder="Document No.">
+					        <input type="text" class="form-control" id="GdocumentNumber" placeholder="">
 					      </div>
 					    </div>
 
