--- a/html/createDeed.html
+++ b/html/createDeed.html
@@ -23,26 +23,21 @@
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
 				<li class="nav-item">
-					<a class="nav-link" href="createDeed.html">Create Deed<span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="createDeed.html">สร้างโฉนดที่ดิน<span class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="getDeed.html">Get Deed</a>
+					<a class="nav-link" href="getDeed.html">เรียกดูโฉนดที่ดิน</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="saveTransaction.html">Save Transaction</a>
+					<a class="nav-link" href="saveTransaction.html">บันทึกธุรกรรม</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="endTransaction.html">End Transaction</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="getTransaction.html">Get Transaction</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="checkContract.html">Check Contract</a>
+					<a class="nav-link" href="getTransaction.html">เรียกดูธุรกรรม</a>
 				</li>
 			</ul>
 		</div>
 	</nav>
+
 	<br>
 	<div class="container-fluid">
 		<div class="container  bg-light">
