--- a/html/getTransaction.html
+++ b/html/getTransaction.html
@@ -15,35 +15,28 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
 </head>
-<body>
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-		<a class="navbar-brand text-white" style="font-size: 25px;">Deed</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="navbarNav">
-			<ul class="navbar-nav">
-				<li class="nav-item">
-					<a class="nav-link" href="createDeed.html">Create Deed<span class="sr-only">(current)</span></a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="getDeed.html">Get Deed</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="saveTransaction.html">Save Transaction</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="endTransaction.html">End Transaction</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="getTransaction.html">Get Transaction</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="checkContract.html">Check Contract</a>
-				</li>
-			</ul>
-		</div>
-	</nav>
+<body><nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+	<a class="navbar-brand text-white" style="font-size: 25px;">Deed</a>
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	</button>
+	<div class="collapse navbar-collapse" id="navbarNav">
+		<ul class="navbar-nav">
+			<li class="nav-item">
+				<a class="nav-link" href="createDeed.html">สร้างโฉนดที่ดิน<span class="sr-only">(current)</span></a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="getDeed.html">เรียกดูโฉนดที่ดิน</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="saveTransaction.html">บันทึกธุรกรรม</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="getTransaction.html">เรียกดูธุรกรรม</a>
+			</li>
+		</ul>
+	</div>
+</nav>
 	<br>
 	<div class="container-fluid">
 		<div class="container  bg-light">
