--- a/html/createDeed.html
+++ b/html/createDeed.html
@@ -155,7 +155,7 @@
 		<div class="modal-dialog modal-dialog-centered" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
-					<h5 class="modal-title" id="exampleModalLongTitle">Login</h5>
+					<h5 class="modal-title" id="exampleModalLongTitle">Confirm transaction</h5>
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 					</button>
@@ -163,18 +163,18 @@
 				<div class="modal-body">
 					<form>
 						<div class="form-group">
-							<label for="username" class="col-form-label">Username:</label>
+							<label for="username" class="col-form-label">Public key :</label>
 							<input type="text" class="form-control" id="username">
 						</div>
 						<div class="form-group">
-							<label for="password" class="col-form-label">Password:</label>
+							<label for="password" class="col-form-label">Private key :</label>
 							<input type="text" class="form-control" id="password">
 						</div>
 					</form>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-					<button type="button" class="btn btn-dark" onclick="sendDocument();">Login</button>
+					<button type="button" class="btn btn-dark" onclick="sendDocument();">Confirm</button>
 				</div>
 			</div>
 		</div>
