--- a/html/saveTransaction.html
+++ b/html/saveTransaction.html
@@ -154,5 +154,13 @@
 	})();
 	</script>
 
+	<script type="text/javascript">
+	$(document).ready(function(){
+		$("#login").click(function() {
+			$("#closeModal").click();
+		});
+	});
+	</script>
+
 </body>
 </html>
