--- a/html/createDeed.html
+++ b/html/createDeed.html
@@ -180,7 +180,22 @@
 		</div>
 	</div>
 
-
+	<div class="modal fade" id="transactionStatus" tabindex="-1" role="dialog" aria-labelledby="transactionSuccessCenterTitle" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="transactionSuccessCenterTitle">Transaction</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<p class="text-success text-center" id="complete" style="font-size: 25px;">Transaction Complete</p>
+					<p class="text-danger text-center" id="fail" style="font-size: 25px;">Transaction Fail</p>
+				</div>
+			</div>
+		</div>
+	</div>
 
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
