--- a/html/createDeed.html
+++ b/html/createDeed.html
@@ -228,6 +228,7 @@
 
 	<script type="text/javascript">
 	$(document).ready(function(){
+		alert(acc);
 		$("#login").click(function() {
 			$("#closeModal").click();
 		});
