--- a/html/getTransaction2.html
+++ b/html/getTransaction2.html
@@ -22,17 +22,17 @@
 	</button>
 	<div class="collapse navbar-collapse" id="navbarNav">
 		<ul class="navbar-nav">
-			<li class="nav-item" id="createLi">
+			<!-- <li class="nav-item" id="createLi">
 				<a class="nav-link" href="createDeed.html">สร้างโฉนดที่ดิน<span class="sr-only">(current)</span></a>
-			</li>
-			<li class="nav-item" id="getDeedLi">
-				<a class="nav-link" href="getDeed.html">เรียกดูโฉนดที่ดิน</a>
-			</li>
-			<!-- <li class="nav-item" id="saveTransactionLi">
-				<a class="nav-link" href="saveTransaction.html">บันทึกธุรกรรม</a>
 			</li> -->
+			<li class="nav-item" id="getDeedLi">
+				<a class="nav-link" href="getDeed2.html">เรียกดูโฉนดที่ดิน</a>
+			</li>
+			<li class="nav-item" id="saveTransactionLi">
+				<a class="nav-link" href="saveTransaction2.html">บันทึกธุรกรรม</a>
+			</li>
 			<li class="nav-item" id="getTransactionLi">
-				<a class="nav-link" href="getTransaction.html">เรียกดูธุรกรรม</a>
+				<a class="nav-link" href="getTransaction2.html">เรียกดูธุรกรรม</a>
 			</li>
 		</ul>
 	</div>
