--- a/html/getDeed.html
+++ b/html/getDeed.html
@@ -22,16 +22,16 @@
 	</button>
 	<div class="collapse navbar-collapse" id="navbarNav">
 		<ul class="navbar-nav">
-			<li class="nav-item">
+			<li class="nav-item" id="createLi">
 				<a class="nav-link" href="createDeed.html">สร้างโฉนดที่ดิน<span class="sr-only">(current)</span></a>
 			</li>
-			<li class="nav-item">
+			<li class="nav-item" id="getDeedLi">
 				<a class="nav-link" href="getDeed.html">เรียกดูโฉนดที่ดิน</a>
 			</li>
-			<li class="nav-item">
+			<!-- <li class="nav-item" id="saveTransactionLi">
 				<a class="nav-link" href="saveTransaction.html">บันทึกธุรกรรม</a>
-			</li>
-			<li class="nav-item">
+			</li> -->
+			<li class="nav-item" id="getTransactionLi">
 				<a class="nav-link" href="getTransaction.html">เรียกดูธุรกรรม</a>
 			</li>
 		</ul>
