--- a/html/getTransaction.html
+++ b/html/getTransaction.html
@@ -88,11 +88,11 @@
 			<div class="modal-body">
 				<form>
 					<div class="form-group">
-						<label for="username" class="col-form-label">Public key :</label>
+						<label for="username" class="col-form-label">Public key : เจ้าของโฉนด</label>
 						<input type="text" class="form-control" id="username">
 					</div>
 					<div class="form-group">
-						<label for="password" class="col-form-label">Private key :</label>
+						<label for="password" class="col-form-label">Private key : เจ้าของโฉนด</label>
 						<input type="text" class="form-control" id="password">
 					</div>
 				</form>
