--- a/html/createDeed.html
+++ b/html/createDeed.html
@@ -163,11 +163,11 @@
 				<div class="modal-body">
 					<form>
 						<div class="form-group">
-							<label for="username" class="col-form-label">Public key :</label>
+							<label for="username" class="col-form-label">Public key : เจ้าหน้าที่กรมที่ดิน</label>
 							<input type="text" class="form-control" id="username">
 						</div>
 						<div class="form-group">
-							<label for="password" class="col-form-label">Private key :</label>
+							<label for="password" class="col-form-label">Private key : เจ้าหน้าที่กรมที่ดิน</label>
 							<input type="text" class="form-control" id="password">
 						</div>
 					</form>
