--- a/html/createDeed.html
+++ b/html/createDeed.html
@@ -114,7 +114,7 @@
 							</div>
 						</div>
 						<div class="form-group container col-md-11">
-							<label for="nationality">สัญชาติ</label>
+							<label for="nationality">เลขบัตรประชาชน</label>
 							<input type="text" class="form-control" id="Cnationality" placeholder="" required>
 							<div class="invalid-feedback">
 								กรุณากรอกข้อมูลในช่องนี้
