--- a/html/getDeed2.html
+++ b/html/getDeed2.html
@@ -121,7 +121,7 @@
 					</div>
 					<div class="w-100"></div>
 					<div class="form-group container col-md-5">
-						<label for="nationality">สัญชาติ</label>
+						<label for="nationality">เลขบัตรประชาชน</label>
 						<input type="text" readonly class="form-control" id="Gnationality" placeholder="">
 					</div>
 				</div>
