--- a/html/getDeed2.html
+++ b/html/getDeed2.html
@@ -34,6 +34,9 @@
 			<li class="nav-item" id="getTransactionLi">
 				<a class="nav-link" href="getTransaction2.html">เรียกดูธุรกรรม</a>
 			</li>
+			<li class="nav-item" id="endTransaction">
+				<a class="nav-link" href="endTransaction.html">เรียกดูธุรกรรม</a>
+			</li>
 		</ul>
 	</div>
 </nav>
