--- a/html/endTransaction.html
+++ b/html/endTransaction.html
@@ -8,7 +8,8 @@
 
 <!--===============================================================================================-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+	<script src="web3.js"></script>
+	<script src="connectC.js"></script>
 
 </head>
 <body>
@@ -97,7 +98,7 @@
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-secondary" id="closeModal" data-dismiss="modal">Close</button>
-					<button type="button" id="login" class="btn btn-dark" onclick="getDocument();">Confirm</button>
+					<button type="button" id="login" class="btn btn-dark" onclick="endTransaction();">Confirm</button>
 				</div>
 			</div>
 		</div>
