--- a/html/saveTransaction2.html
+++ b/html/saveTransaction2.html
@@ -35,7 +35,7 @@
 				<a class="nav-link" href="getTransaction2.html">เรียกดูธุรกรรม</a>
 			</li>
 			<li class="nav-item" id="endTransaction">
-				<a class="nav-link" href="endTransaction.html">เรียกดูธุรกรรม</a>
+				<a class="nav-link" href="endTransaction.html">สิ้นสุดภาระจำนอง</a>
 			</li>
 		</ul>
 	</div>
